fixed register form and birthDate validation

--- a/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
@@ -91,6 +91,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>KalendarzKarieryDBEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\BirthDateModel.cs" />
     <Compile Include="PrivacyLevel.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
