implemented first stage of eventTree object

--- a/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
@@ -91,6 +91,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>KalendarzKarieryDBEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\TransportModels\CalendarEventTreeModel.cs" />
+    <Compile Include="Models\TransportModels\EventsGroupedByDayModel.cs" />
     <Compile Include="Models\ViewModels\BirthDateModel.cs" />
     <Compile Include="PrivacyLevel.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
