--- a/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Transactions" />
@@ -63,6 +64,7 @@
     <Compile Include="Address.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="BO\Cache\AppCache.cs" />
     <Compile Include="Comment.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
@@ -93,7 +95,8 @@
     </Compile>
     <Compile Include="Models\TransportModels\CalendarEventTreeModel.cs" />
     <Compile Include="Models\TransportModels\EventsGroupedByDayModel.cs" />
-    <Compile Include="Models\ViewModels\BirthDateModel.cs" />
+    <Compile Include="Models\TransportModels\EventsGroupedByMonthModel.cs" />
+    <Compile Include="Models\ViewModels\DateModel.cs" />
     <Compile Include="PrivacyLevel.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
@@ -163,9 +166,7 @@
     <Content Include="SqlScripts\ReseedTable.sql" />
     <Content Include="SqlScripts\CreateDatabaseScript.sql" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="BO\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
