--- a/KalendarzKarierySolution/KalendarzKarieryWebAPI/KalendarzKarieryWebAPI.csproj
+++ b/KalendarzKarierySolution/KalendarzKarieryWebAPI/KalendarzKarieryWebAPI.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ResponseModels\AddEventResponseModel.cs" />
     <Compile Include="Models\ResponseModels\IResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\ResponseModels\DefaultResponseModel.cs" />
