--- a/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Models\TransportModels\EventsGroupedByDayModel.cs" />
     <Compile Include="Models\TransportModels\EventsGroupedByMonthModel.cs" />
     <Compile Include="Models\ViewModels\DateModel.cs" />
+    <Compile Include="Models\ViewModels\MainViewModel.cs" />
     <Compile Include="PrivacyLevel.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
@@ -106,7 +107,7 @@
     <Compile Include="Models\ValidationModels\AddressValidationModel.cs" />
     <Compile Include="Models\ValidationModels\EventValidationModel.cs" />
     <Compile Include="Models\ValidationModels\UserValidationModel.cs" />
-    <Compile Include="Models\ViewModels\AddEventViewModel.cs" />
+    <Compile Include="Models\ValidationModels\AddEventViewModel.cs" />
     <Compile Include="Models\ViewModels\IndexViewModel.cs" />
     <Compile Include="Models\ViewModels\RegisterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
