--- a/KalendarzKarierySolution/KalendarzKarieryWebAPI/KalendarzKarieryWebAPI.csproj
+++ b/KalendarzKarierySolution/KalendarzKarieryWebAPI/KalendarzKarieryWebAPI.csproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Global.asax.cs">
