--- a/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TestsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -310,12 +311,19 @@
     <Content Include="Images\TestBackgrounds\1600x900purple-white.jpg" />
     <Content Include="Images\TestBackgrounds\kalendarzTlo4.png" />
     <Content Include="Images\TestBackgrounds\tapetaBrx.png" />
+    <Content Include="JSUnitTests\Jasmine-2.1.3\spec\EventTreeBuilderSpec.js" />
     <Content Include="Scripts\Helpers\EventTreeBuilder.js" />
     <Content Include="Scripts\Helpers\EventColorHelper.js" />
     <Content Include="Scripts\JSModels\KKDateModel.js" />
     <Content Include="Scripts\JSModels\KKEventDateModel.js" />
     <Content Include="Scripts\JSModels\KKEventModel.js" />
     <Content Include="Scripts\KnockoutCustomBindings\KOCustomBindings.js" />
+    <Content Include="JSUnitTests\Jasmine-2.1.3\boot.js" />
+    <Content Include="JSUnitTests\Jasmine-2.1.3\console.js" />
+    <Content Include="JSUnitTests\Jasmine-2.1.3\jasmine-html.js" />
+    <Content Include="JSUnitTests\Jasmine-2.1.3\jasmine.css" />
+    <Content Include="JSUnitTests\Jasmine-2.1.3\jasmine.js" />
+    <Content Include="JSUnitTests\Jasmine-2.1.3\jasmine_favicon.png" />
     <Content Include="Scripts\Lib\jquery-2.0.3.js" />
     <Content Include="Scripts\Lib\jquery-2.0.3.min.js" />
     <Content Include="Scripts\Lib\jquery-2.0.3.min.map" />
@@ -381,6 +389,7 @@
     <Content Include="Views\Home\LobbyPage\_lobbyNews.cshtml" />
     <Content Include="Views\Home\DetailsPage\_DetailsSettings.cshtml" />
     <Content Include="Views\Home\DetailsPage\_DetailsUserProfile.cshtml" />
+    <Content Include="Views\Shared\JSUnitTests.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
