--- a/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
@@ -93,10 +93,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>KalendarzKarieryDBEntities.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Models\TransportModels\EventsGroupedByYearModel.cs" />
-    <Compile Include="Models\TransportModels\EventsGroupedByDayModel.cs" />
-    <Compile Include="Models\TransportModels\EventsGroupedByMonthModel.cs" />
-    <Compile Include="Models\TransportModels\JsonEventModel.cs" />
+    <Compile Include="Models\DataTransferModels\EventsGroupedByYearModel.cs" />
+    <Compile Include="Models\DataTransferModels\EventsGroupedByDayModel.cs" />
+    <Compile Include="Models\DataTransferModels\EventsGroupedByMonthModel.cs" />
+    <Compile Include="Models\DataTransferModels\JsonEventModel.cs" />
     <Compile Include="Models\ViewModels\DateModel.cs" />
     <Compile Include="Models\ViewModels\MainViewModel.cs" />
     <Compile Include="PrivacyLevel.cs">
