--- a/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
@@ -266,6 +266,8 @@
     <Content Include="Images\BackgroundParts\MiddlePartBg.png" />
     <Content Include="Images\BackgroundParts\RightSidePixelDark.png" />
     <Content Include="Images\Form\letter_bg.png" />
+    <Content Include="Images\Icons\arrow_down.png" />
+    <Content Include="Images\Icons\arrow_up.png" />
     <Content Include="Images\Ico\favicon.ico" />
     <Content Include="Images\kalendarzTloClear.png" />
     <Content Include="Images\Icons\list-icon.png" />
@@ -311,8 +313,9 @@
     <Content Include="Images\TestBackgrounds\1600x900purple-white.jpg" />
     <Content Include="Images\TestBackgrounds\kalendarzTlo4.png" />
     <Content Include="Images\TestBackgrounds\tapetaBrx.png" />
-    <Content Include="JSUnitTests\Jasmine-2.1.3\spec\EventTreeBuilderSpec.js" />
+    <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\spec\EventTreeBuilderSpec.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.superslides.js" />
+    <Content Include="Scripts\Helpers\EventFactory.js" />
     <Content Include="Scripts\Helpers\EventTreeBuilder.js" />
     <Content Include="Scripts\Helpers\EventColorHelper.js" />
     <Content Include="Scripts\JSModels\KKDateModel.js" />
@@ -320,12 +323,12 @@
     <Content Include="Scripts\JSModels\KKEventModel.js" />
     <Content Include="Scripts\JSModels\KKEventModelObservable.js" />
     <Content Include="Scripts\KnockoutCustomBindings\KOCustomBindings.js" />
-    <Content Include="JSUnitTests\Jasmine-2.1.3\boot.js" />
-    <Content Include="JSUnitTests\Jasmine-2.1.3\console.js" />
-    <Content Include="JSUnitTests\Jasmine-2.1.3\jasmine-html.js" />
-    <Content Include="JSUnitTests\Jasmine-2.1.3\jasmine.css" />
-    <Content Include="JSUnitTests\Jasmine-2.1.3\jasmine.js" />
-    <Content Include="JSUnitTests\Jasmine-2.1.3\jasmine_favicon.png" />
+    <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\boot.js" />
+    <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\console.js" />
+    <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\jasmine-html.js" />
+    <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\jasmine.css" />
+    <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\jasmine.js" />
+    <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\jasmine_favicon.png" />
     <Content Include="Scripts\Lib\jquery-2.0.3.js" />
     <Content Include="Scripts\Lib\jquery-2.0.3.min.js" />
     <Content Include="Scripts\Lib\jquery-2.0.3.min.map" />
