--- a/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
@@ -203,6 +203,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Fonts\Oxygen\OFL.txt" />
+    <Content Include="Content\MediaQueries.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -356,6 +357,7 @@
     <Content Include="Scripts\Lib\SpinJS\spin.min.js" />
     <Content Include="Scripts\Lib\_references.js" />
     <Content Include="Scripts\Lib\modernizr-2.7.1.js" />
+    <Content Include="Scripts\Program.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
