--- a/KalendarzKarierySolution/KalendarzKarieryCore/2. KalendarzKarieryCore.csproj
+++ b/KalendarzKarierySolution/KalendarzKarieryCore/2. KalendarzKarieryCore.csproj
@@ -39,12 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BO\DateTimeFacade.cs" />
     <Compile Include="Consts\Consts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="BO\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
