--- a/KalendarzKarierySolution/KalendarzKarieryWebAPI/4. KalendarzKarieryWebAPI.csproj
+++ b/KalendarzKarierySolution/KalendarzKarieryWebAPI/4. KalendarzKarieryWebAPI.csproj
@@ -113,10 +113,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\ResponseModels\AddEventResponseModel.cs" />
-    <Compile Include="Models\ResponseModels\IResponse.cs" />
+    <Compile Include="Models\ResponseModels\AddEventValidationResponseModel.cs" />
+    <Compile Include="Models\ResponseModels\IValidationResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\ResponseModels\DefaultResponseModel.cs" />
+    <Compile Include="Models\ResponseModels\DefaultValidationResponseModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
