added JsonDateTimeModel, sending dates as separate properties and not as datetimes as it was done before

--- a/KalendarzKarierySolution/Data/3. KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/Data/3. KalendarzKarieryData.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Models\DataTransferModels\EventsGroupedByYearModel.cs" />
     <Compile Include="Models\DataTransferModels\EventsGroupedByDayModel.cs" />
     <Compile Include="Models\DataTransferModels\EventsGroupedByMonthModel.cs" />
+    <Compile Include="Models\DataTransferModels\JsonDateTimeModel.cs" />
     <Compile Include="Models\DataTransferModels\JsonEventModel.cs" />
     <Compile Include="Models\ViewModels\DateModel.cs" />
     <Compile Include="Models\ViewModels\MainViewModel.cs" />
