--- a/KalendarzKarierySolution/packages/repositories.config
+++ b/KalendarzKarierySolution/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\Data\packages.config" />
   <repository path="..\KalendarzKariery.Tests\packages.config" />
   <repository path="..\KalendarzKariery\packages.config" />
+  <repository path="..\KalendarzKarieryData\packages.config" />
   <repository path="..\KalendarzKarieryWebApi\packages.config" />
 </repositories>
