--- a/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
@@ -308,7 +308,7 @@
     <Content Include="Images\kalendarzTlo.png" />
     <Content Include="Images\Loader\ajax-loader.gif" />
     <Content Include="Images\point.png" />
-    <Content Include="Scripts\JSViewModels\CalendarViewModel.js" />
+    <Content Include="Scripts\JSViewModels\AppViewModel.js" />
     <Content Include="Scripts\CalendarWidget\calendarWidget.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.animate-enhanced.min.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.easing.1.3.js" />
