--- a/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
@@ -278,6 +278,7 @@
     <Content Include="Content\Fonts\Raleway\Raleway-Thin-Italic.ttf" />
     <Content Include="Content\Fonts\Raleway\Raleway-Thin.ttf" />
     <None Include="Properties\PublishProfiles\Alan.pubxml" />
+    <Content Include="Scripts\Helpers\EventManager.js" />
     <Content Include="Scripts\Helpers\WebApiCaller.js" />
     <Content Include="Scripts\Lib\HammerJS\hammer.min.map" />
     <None Include="Scripts\Lib\jquery-2.0.3.intellisense.js" />
@@ -288,7 +289,6 @@
     <Content Include="Images\TestBackgrounds\tapetaBrx.png" />
     <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\spec\EventTreeBuilderSpec.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.superslides.js" />
-    <Content Include="Scripts\Helpers\EventFactory.js" />
     <Content Include="Scripts\Helpers\EventTreeBuilder.js" />
     <Content Include="Scripts\Helpers\EventColorHelper.js" />
     <Content Include="Scripts\JSModels\KKDateModel.js" />
