--- a/KalendarzKarierySolution/KalendarzKarieryData/3. KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/KalendarzKarieryData/3. KalendarzKarieryData.csproj
@@ -75,7 +75,7 @@
     <Compile Include="EventKind.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="EventStatus.cs">
+    <Compile Include="EventStatu.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="KalendarzKarieryDBEntities.Context.cs">
@@ -100,6 +100,12 @@
     <Compile Include="Models\DataTransferModels\JsonEventModel.cs" />
     <Compile Include="Models\ViewModels\DateModel.cs" />
     <Compile Include="Models\ViewModels\MainViewModel.cs" />
+    <Compile Include="Note.cs">
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="NoteKind.cs">
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="PrivacyLevel.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
@@ -114,12 +120,6 @@
     <Compile Include="Models\ViewModels\RegisterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\RepositoryProvider.cs" />
-    <Compile Include="sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="sp_helpdiagrams_Result.cs">
-      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
-    </Compile>
     <Compile Include="sysdiagram.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
