--- a/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
@@ -279,7 +279,10 @@
     <Content Include="Content\Fonts\Raleway\Raleway-Thin.ttf" />
     <None Include="Properties\PublishProfiles\Alan.pubxml" />
     <Content Include="Scripts\Helpers\EventManager.js" />
+    <Content Include="Scripts\Helpers\NoteManager.js" />
     <Content Include="Scripts\Helpers\WebApiCaller.js" />
+    <Content Include="Scripts\JSModels\KKNoteModelObservable.js" />
+    <Content Include="Scripts\JSModels\KKNoteModel.js" />
     <Content Include="Scripts\Lib\HammerJS\hammer.min.map" />
     <None Include="Scripts\Lib\jquery-2.0.3.intellisense.js" />
     <Content Include="Images\TestBackgrounds\1600x900.jpg" />
@@ -289,7 +292,7 @@
     <Content Include="Images\TestBackgrounds\tapetaBrx.png" />
     <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\spec\EventTreeBuilderSpec.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.superslides.js" />
-    <Content Include="Scripts\Helpers\EventTreeBuilder.js" />
+    <Content Include="Scripts\Helpers\TreeBuilder.js" />
     <Content Include="Scripts\Helpers\EventColorHelper.js" />
     <Content Include="Scripts\JSModels\KKDateModel.js" />
     <Content Include="Scripts\JSModels\KKEventDateModel.js" />
@@ -358,7 +361,6 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Home\LobbyPage\_Register.cshtml" />
     <Content Include="Views\Home\DetailsPage\_Details.cshtml" />
-    <Content Include="Views\Home\DetailsPage\_DetailsEventSummary.cshtml" />
     <Content Include="Views\Home\LobbyPage\_LobbyEventInfo.cshtml" />
     <Content Include="Views\Home\SharedPartials\_ConfirmationPopupBox.cshtml" />
     <Content Include="Views\Home\DetailsPage\_DetailsAllSelectedEventsList.cshtml" />
@@ -375,6 +377,7 @@
     <Content Include="Views\Shared\_LayoutMobile.cshtml" />
     <Content Include="Views\Home\DetailsPage\_DetailsEventInfo.cshtml" />
     <Content Include="Views\Home\DetailsPage\_DetailsNotesSummary.cshtml" />
+    <Content Include="Views\Home\DetailsPage\_DetailsEventsAndNotesContainer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
