--- a/KalendarzKarierySolution/KalendarzKarieryWebAPI/4. KalendarzKarieryWebAPI.csproj
+++ b/KalendarzKarierySolution/KalendarzKarieryWebAPI/4. KalendarzKarieryWebAPI.csproj
@@ -110,11 +110,14 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
+    <Compile Include="Controllers\NotesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ResponseModels\AddEventValidationResponseModel.cs" />
+    <Compile Include="Models\ResponseModels\AddNoteValidationResponseModel.cs" />
     <Compile Include="Models\ResponseModels\IValidationResponse.cs" />
+    <Compile Include="Models\ResponseModels\UpdateNoteValidationResponseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\ResponseModels\DefaultValidationResponseModel.cs" />
   </ItemGroup>
