--- a/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
@@ -281,6 +281,7 @@
     <Content Include="Scripts\Helpers\EventManager.js" />
     <Content Include="Scripts\Helpers\NoteManager.js" />
     <Content Include="Scripts\Helpers\WebApiCaller.js" />
+    <Content Include="Scripts\JSModels\KKEventDateModelObservable.js" />
     <Content Include="Scripts\JSModels\KKNoteModelObservable.js" />
     <Content Include="Scripts\JSModels\KKNoteModel.js" />
     <Content Include="Scripts\Lib\HammerJS\hammer.min.map" />
