--- a/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
@@ -226,8 +226,7 @@
     <Content Include="Images\Icons\list-icon.png" />
     <Content Include="Images\Logo\blackAndWhiteSmallKKLogo.png" />
     <Content Include="Images\Logo\kkLogo.png" />
-    <Content Include="Images\Logo\kkLogo_small.png" />
-    <Content Include="Images\Logo\kkLogo_verysmall.png" />
+    <Content Include="Images\Logo\kkLogo_smaller.png" />
     <Content Include="Images\Logo\lightSmallKKLogo.png" />
     <Content Include="Images\Logo\sephiaLogo.png" />
     <Content Include="Images\Logo\sephiaSmallKKLogo.png" />
