--- a/KalendarzKarierySolution/KalendarzKariery/Web.config
+++ b/KalendarzKarierySolution/KalendarzKariery/Web.config
@@ -27,7 +27,7 @@
 		<!--<add name="KalendarzKarieryDBEntities" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 		
 		<!--azure-->
-		<add name="KalendarzKarieryDBEntities" providerName="System.Data.EntityClient" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:wpjaritlp5.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@wpjaritlp5;Password=Polska123;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;&quot;" />
+		<add name="KalendarzKarieryDBEntities" providerName="System.Data.EntityClient" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:wpjaritlp5.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@wpjaritlp5;Password=Polska123;Trusted_Connection=False;MultipleActiveResultSets=True;Encrypt=True;Connection Timeout=30;&quot;" />
 
 	</connectionStrings>
 	<system.data>
